replaced google header with google image

--- a/myGoogleHomepage.html
+++ b/myGoogleHomepage.html
@@ -9,7 +9,7 @@
 </head>
 	
 <body>
-	<h1>Google</h1>
+	<img src="https://www.google.ca/images/srpr/logo11w.png">
 	<form name="search" method="get">
 		<input type ="text" name="searchBox"><br>
 		<input type = "submit" value = "Google Search">
