--- a/myGoogleHomepage.html
+++ b/myGoogleHomepage.html
@@ -5,6 +5,7 @@
 <head>
     <title>My Google Home Page</title>
     <link rel="stylesheet" type="text/css" href="myGoogleHomepage.css">
+    <meta charset="utf-8">
 
 </head>
 	
@@ -15,4 +16,8 @@
 		<input type = "submit" value = "Google Search">
 		<input type = "submit" value = "I'm Feeling Lucky">
 	</form>
+	<br>
+	<p>
+		myGoogleHomepage.html is also offered in <a href="notAFile">Français</a>
+	</p>
 </body>
