Added text for top navbar

--- a/myGoogleHomepage.html
+++ b/myGoogleHomepage.html
@@ -10,6 +10,9 @@
 </head>
 	
 <body>
+	<ul>
+		<li>+Peter</li><li>Gmail</li><li>Images</li><li>Share</li>
+	</ul>
 	<img src="https://www.google.ca/images/srpr/logo11w.png">
 	<form name="search" method="get">
 		<input type ="text" name="searchBox"><br>
