added footer elements

--- a/myGoogleHomepage.html
+++ b/myGoogleHomepage.html
@@ -10,8 +10,11 @@
 </head>
 	
 <body>
-	<ul>
-		<li>+Peter</li><li>Gmail</li><li>Images</li><li>Share</li>
+	<ul class="header">
+		<li><a href>+Peter</a> </li>
+		<li><a href>Gmail </a></li>
+		<li><a href>Images</a> </li>
+		<li><a href>Share</a></li>
 	</ul>
 	<img src="https://www.google.ca/images/srpr/logo11w.png">
 	<form name="search" method="get">
@@ -21,6 +24,18 @@
 	</form>
 	<br>
 	<p>
-		myGoogleHomepage.html is also offered in <a href="notAFile">Français</a>
+		myGoogleHomepage.html is also offered in <a href>Français</a>
 	</p>
+	<ul class="Lfooter">
+		<li><a href>Advertising </a></li>
+		<li><a href>Business </a></li>
+		<li><a href>About</a></li>
+	</ul>
+	<ul class="Rfooter">
+		<li><a href>Privacy & Terms </a></li>
+		<li><a href>Settings </a></li>
+		<li><a href>Google.com</a></li>
+	</ul>
+	<ul>
+	</ul>
 </body>
