fixed elements to better match the homepage

--- a/myGoogleHomepage.html
+++ b/myGoogleHomepage.html
@@ -18,7 +18,7 @@
 	</ul>
 	<img src="https://www.google.ca/images/srpr/logo11w.png">
 	<form name="search" method="get">
-		<input type ="text" name="searchBox"><br>
+		<input type ="text" name="searchBox" class = "textBox"><br>
 		<input type = "submit" value = "Google Search">
 		<input type = "submit" value = "I'm Feeling Lucky">
 	</form>
