Added the canada under the google logo

--- a/myGoogleHomepage.html
+++ b/myGoogleHomepage.html
@@ -17,6 +17,8 @@
 		<li><a href>Share</a></li>
 	</ul>
 	<img src="https://www.google.ca/images/srpr/logo11w.png">
+	<br>
+	<p nowrap class = "Canada">Canada</p>
 	<form name="search" method="get">
 		<input type ="text" name="searchBox" class = "textBox"><br>
 		<input type = "submit" value = "Google Search">
